--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,89 +1,66 @@
 {% extends 'base.html' %}
 {% block content %}
-<body>
-<div class="header-end">
-<div class="container">
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+<div class="container py-4">
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-        <img src="{{ random_wear.image.url }}" alt="...">
-        <div class="carousel-caption car-re-posn">
-            <h3>{{ random_wear.title }}</h3>
-            <h4>{{ random_wear.subtitle }}</h4>
-            <span class="color-bar"></span>
+  <!-- Carousel -->
+  <div id="heroCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
+    </div>
+    <div class="carousel-inner rounded-4 shadow">
+      <div class="carousel-item active">
+        <img src="{{ random_wear.image.url }}" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded-3 p-3">
+          <h3 class="text-light">{{ random_wear.title }}</h3>
+          <p class="text-light">{{ random_wear.subtitle }}</p>
         </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+
+  <!-- Info Boxes -->
+  <div class="row mb-5 text-center">
+    <div class="col-md-6 mb-3">
+      <div class="bg-light border rounded p-4 h-100 shadow-sm">
+        <h3>Davron-style</h3>
+        <p>Yangi eng so'nggi <br> takrorlanmas T-shirt shop</p>
+      </div>
+    </div>
+    <div class="col-md-6 mb-3">
+      <div class="bg-light border rounded p-4 h-100 shadow-sm">
+        <h3>Sifat</h3>
+        <p>Kafolatlangan <br> yetkazib berish xizmati mavjud</p>
+      </div>
     </div>
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left car-icn" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right car-icn" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<div class="clearfix"></div>
-</div>
-</div>
-<div class="feel-fall">
-<div class="container">
-<div class="pull-left fal-box">
-    <div class=" fall-left">
-        <h3>Davron-style </h3>
-<!--        <img src="{{ random_wear.image.url }}" alt="/" class="img-responsive fl-img-wid">-->
-        <p>Yangi eng so'nggi <br>takrorlanmas T-shirt shop</p>
-        <span class="fel-fal-bar"></span>
-    </div>
-</div>
-<div class="pull-right fel-box">
-    <div class="feel-right">
-        <h3>Sifat</h3>
-<!--        <img src="images/f-r.png" alt="/" class="img-responsive fl-img-wid">-->
-        <p>Kafolatlangan<br> yetkazib berish xizmati mavjud</p>
-        <span class="fel-fal-bar2"></span>
-    </div>
-</div>
-<div class="clearfix"></div>
-</div>
-</div>
-<div class="shop-grid">
-<div class="container">
-{% for i in ctg %}
-<div class="col-md-4 grid-stn simpleCart_shelfItem">
-     <!-- normal -->
-        <div class="ih-item square effect3 bottom_to_top">
-            <div class="bottom-2-top">
-    <div class="img"><img src="{{ i.image.url }}" alt="/" class="img-responsive gri-wid"></div>
-            <div class="info">
-                <div class="pull-left styl-hdn">
-                    <h3>{{ i.name }}</h3>
-                </div>
-                <div class="pull-right styl-price">
-                    <p><a  href="#" class="item_add"><span class="glyphicon glyphicon-shopping-cart grid-cart" aria-hidden="true"></span> <span class=" item_price">$190</span></a></p>
-                </div>
-                <div class="clearfix"></div>
-            </div></div>
+  <!-- Products -->
+  <div class="row g-4">
+    {% for i in ctg %}
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm">
+        <img src="{{ i.image.url }}" class="card-img-top" alt="{{ i.name }}">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">{{ i.name }}</h5>
+          <div class="mt-auto d-flex justify-content-between align-items-center">
+            <a href="#" class="btn btn-outline-primary btn-sm">
+              <i class="bi bi-cart"></i> $190
+            </a>
+            <a href="{% url 'products' slug=i.slug %}" class="btn btn-link btn-sm">Quick view</a>
+          </div>
         </div>
-    <!-- end normal -->
-    <div class="quick-view">
-        <a href="{% url 'products' slug=i.slug %}">Quick view</a>
+      </div>
     </div>
-</div>
-{% endfor %}
-<div class="clearfix"></div>
+    {% endfor %}
+  </div>
 
 </div>
-</div>
-</body>
-{% endblock content %}
+{% endblock %}
